# vio_data_simulation

./: .gitignore  CMakeLists.txt  README.md
estimator/: CMakeLists.txt  ba_pose_rate.cpp  ba_pose_rate.h  data_loader.cpp  data_loader.h  ekf_pose_rate.cpp  ekf_pose_rate.h  estimator.cpp  estimator.h  imu_preintegration.h  joint_feature_velocity.cpp  joint_feature_velocity.h  main.cpp  vision_only.cpp  vision_only.h
main/: gener_alldata.cpp  main.cpp
python_tool/: GeometryLib.py  draw_estimated.py  draw_points.py  draw_td_sweep.py
src/: imu.cpp  imu.h  param.cpp  param.h  utilities.cpp
util/: data_loader.cpp  data_loader.h
